# ARC

./: .gitignore  LICENSE  README.md  app.py  backend.py  data_label.py  data_prep.py  launch_app.sh  lora_load.py  main.py  merge.ipynb  pull_hf.py  pyproject.toml  requirements.txt  reviews.csv  run.sh  run_safety_eval.sh  sft_decoder.py  sft_encoder.py  test.ipynb  train_lora.pbs
extracted_labels/: batch_0_row_19_extracted_labels.json  batch_100_row_2019_extracted_labels.json  batch_101_row_2039_extracted_labels.json  batch_102_row_2059_extracted_labels.json  batch_103_row_2079_extracted_labels.json  batch_104_row_2099_extracted_labels.json  batch_105_row_2119_extracted_labels.json  batch_106_row_2139_extracted_labels.json  batch_107_row_2159_extracted_labels.json  batch_108_row_2179_extracted_labels.json  batch_109_row_2199_extracted_labels.json  batch_10_row_219_extracted_labels.json  batch_110_row_2219_extracted_labels.json  batch_111_row_2239_extracted_labels.json  batch_112_row_2259_extracted_labels.json  batch_113_row_2279_extracted_labels.json  batch_114_row_2299_extracted_labels.json  batch_115_row_2319_extracted_labels.json  batch_116_row_2339_extracted_labels.json  batch_117_row_2359_extracted_labels.json  batch_118_row_2379_extracted_labels.json  batch_119_row_2399_extracted_labels.json  batch_11_row_239_extracted_labels.json  batch_120_row_2419_extracted_labels.json  batch_121_row_2439_extracted_labels.json  batch_122_row_2459_extracted_labels.json  batch_123_row_2479_extracted_labels.json  batch_124_row_2499_extracted_labels.json  (+653 more)
src/app/: app.py  (+1 more)
(+66 files in other folders)
