[project]
name = "techjam25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "fasttext-wheel>=0.9.2",
    "huggingface-hub>=0.34.4",
    "ipykernel>=6.30.1",
    "numpy<2.0",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "transformers>=4.55.4",
]
