[project]
name = "techjam25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "fasttext-wheel>=0.9.2",
    "huggingface-hub>=0.34.4",
    "ipykernel>=6.30.1",
    "numpy<2.0",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "dotenv>=0.9.9",
    "fasttext>=0.9.3",
    "ipykernel>=6.30.1",
    "loguru>=0.7.3",
    "pandas>=2.3.2",
    "peft>=0.17.1",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "transformers>=4.55.4",
    "openai>=1.102.0",
    "pydantic>=2.11.7",
    "fastapi>=0.116.1",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
]
